game work over server for single player